testsuite/tests/polykinds/T15787.stderr

T15787.hs:15:14: error:
    • Expected a type, but ‘k’ has kind ‘ob’
    • In the type ‘k’
      In the definition of data constructor ‘Kl’
      In the data declaration for ‘Kl_kind’
